--- a/AppWidget/build.gradle
+++ b/AppWidget/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation project(path: ':AppImageView')
     implementation project(path: ':AppScrollView')
     implementation project(path: ':CustomWidget')
+    implementation project(path: ':AppShadowLib')
 }
 
