--- a/AppMonitor/src/main/AndroidManifest.xml
+++ b/AppMonitor/src/main/AndroidManifest.xml
@@ -3,12 +3,13 @@
     package="com.yc.appmonitor">
 
     <application
+        android:name=".MonitorApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".MonitorMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
