--- a/AppMonitor/src/main/AndroidManifest.xml
+++ b/AppMonitor/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.yc.appmonitor.CrashTestActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
