--- a/MonitorLib/MonitorCrashLib/build.gradle
+++ b/MonitorLib/MonitorCrashLib/build.gradle
@@ -39,17 +39,18 @@ dependencies {
     implementation(rootProject.ext.dependencies["swiperefreshlayout"])
     implementation(rootProject.ext.dependencies["coordinatorlayout"])
     //工具类utils：https://github.com/yangchong211/YCCommonLib
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.3'
     implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.3'
     implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.3'
     implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.3'
-    //implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ToolUtilsLib')
     //implementation project(path: ':BaseClassLib')
     //implementation project(path: ':AppRestartLib')
     //implementation project(path: ':ActivityManager')
     //implementation project(path: ':EventUploadLib')
-    implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
+    //implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
+    implementation project(path: ':EastAdapterLib')
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     //吐司工具库：https://github.com/yangchong211/YCDialog
