--- a/ServerLib/BellsVibrations/build.gradle
+++ b/ServerLib/BellsVibrations/build.gradle
@@ -27,4 +27,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation(rootProject.ext.dependencies["appcompat"])
+    implementation(rootProject.ext.dependencies["annotation"])
 }
