--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':AppPermission')
     implementation project(path: ':LocaleHelperLib')
 }
