--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -1,13 +1,17 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
+
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
-    //buildToolsVersion rootProject.ext.android["buildToolsVersion"]
+    buildToolsVersion rootProject.ext.android["buildToolsVersion"]
     defaultConfig {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
+        applicationId "com.yc.common"
+        // dex突破65535的限制
+        multiDexEnabled true
     }
     buildTypes {
         release {
