--- a/CommonLib/ToolMemoryLib/build.gradle
+++ b/CommonLib/ToolMemoryLib/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation project(path: ':EventUploadLib')
 }
