--- a/ServerLib/AppLogProcess/src/main/AndroidManifest.xml
+++ b/ServerLib/AppLogProcess/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!--自定义权限-->
     <uses-permission android:name="${applicationId}.permission.LOG_SERVICE" />
 
     <application
