--- a/MonitorLib/MonitorCrashLib/build.gradle
+++ b/MonitorLib/MonitorCrashLib/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     //状态栏：https://github.com/yangchong211/YCStatusBar
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
+    implementation project(path: ':ToolMemoryLib')
+    //腾讯mmkv库
+    implementation "com.tencent:mmkv-static:1.2.7"
 }
