--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':AppPermission')
     implementation project(path: ':LocaleHelperLib')
+    implementation project(path: ':ToolMemoryLib')
+    implementation project(path: ':ToolMemoryLib')
 }
