--- a/AppHelper/build.gradle
+++ b/AppHelper/build.gradle
@@ -259,6 +259,7 @@ dependencies {
     implementation project(path: ':AppWidget')
     implementation project(path: ':MonitorPhone')
     implementation project(path: ':MonitorPingLib')
+    implementation project(path: ':EventUploadLib')
 //    implementation project(path: ':MonitorPrivacy')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
