--- a/AppMonitor/build.gradle
+++ b/AppMonitor/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation project(path: ':MonitorPingLib')
     implementation project(path: ':MonitorFileLib')
     implementation project(path: ':MonitorCrashLib')
+    implementation project(path: ':MonitorSpeed')
 }
