--- a/CommonLib/ToolUtilsLib/build.gradle
+++ b/CommonLib/ToolUtilsLib/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':EventUploadLib')
+    implementation project(path: ':AppCompress')
 }
