--- a/ServerLib/PrivateServer/src/main/AndroidManifest.xml
+++ b/ServerLib/PrivateServer/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.privateserver">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
 </manifest>
