--- a/AppServer/src/main/AndroidManifest.xml
+++ b/AppServer/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.appserver">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+
     <application
         android:name="com.yc.appserver.ServerApplication"
         android:allowBackup="true"
