--- a/AppCommon/src/main/AndroidManifest.xml
+++ b/AppCommon/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".reflect.ReflectionActivity"/>
     </application>
 
 
