--- a/CommonLib/AppBaseStore/build.gradle
+++ b/CommonLib/AppBaseStore/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':EventUploadLib')
+    implementation project(path: ':AppLruDisk')
+    implementation project(path: ':AppLruCache')
+    implementation project(path: ':AppFastSp')
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
 }
