--- a/CommonLib/AppLruDisk/build.gradle
+++ b/CommonLib/AppLruDisk/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':EventUploadLib')
 }
