--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -73,4 +73,8 @@ dependencies {
     implementation project(path: ':AppPermission')
     implementation project(path: ':ToastUtils')
     implementation project(path: ':FragmentManager')
+
+    //其他
+    implementation project(path: ':RoundCorners')
+    implementation project(path: ':LibraryLayer')
 }
