--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -77,4 +77,5 @@ dependencies {
     //其他
     implementation project(path: ':RoundCorners')
     implementation project(path: ':LibraryLayer')
+    implementation project(path: ':ReflectionLib')
 }
