--- a/ToolLib/AppUpdateLib/src/main/AndroidManifest.xml
+++ b/ToolLib/AppUpdateLib/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ycbjie.ycupdatelib" >
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--设置该权限，主要是为了App可以进行版本更新下载apk并安装功能，方便用户升级操作。-->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
 
     <application
