--- a/settings.gradle
+++ b/settings.gradle
@@ -73,7 +73,7 @@ include ':AppStatusLib',':ToolUtilsLib',':FragmentManager',':AppCompress',
         ':AppInitCompiler',':AppLogLib',':AppRestartLib', ':SafeIntentLib',
         ':ArchitectureLib',':ActivityManager', ':ToolFileLib',':EventUploadLib',
         ':AppCommonInter',':ToolMemoryLib',':AppPermission',':PhoneSensor',
-        ':AppLruDisk',':AppLruCache',':AppFastSp',':DownloadHelper'
+        ':AppLruDisk',':AppLruCache',':DownloadHelper'
 project(':AppStatusLib').projectDir = new File('CommonLib/AppStatusLib')
 project(':ToolUtilsLib').projectDir = new File('CommonLib/ToolUtilsLib')
 project(':ComponentLib').projectDir = new File('CommonLib/ComponentLib')
@@ -100,7 +100,6 @@ project(':AppCompress').projectDir = new File('CommonLib/AppCompress')
 project(':PhoneSensor').projectDir = new File('CommonLib/PhoneSensor')
 project(':AppLruDisk').projectDir = new File('CommonLib/AppLruDisk')
 project(':AppLruCache').projectDir = new File('CommonLib/AppLruCache')
-project(':AppFastSp').projectDir = new File('CommonLib/AppFastSp')
 project(':DownloadHelper').projectDir = new File('CommonLib/DownloadHelper')
 
 /* +++++++++ 框架view基础组件层 +++++++++ */
