--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -32,50 +32,65 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
 
     //base基类
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.3'
-    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.5'
     //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     //activity栈管理
-    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.5'
     //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
-    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.5'
     //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.5'
     //app重启库
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
     //intent内容输出到控制台
-    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.5'
     //通用组件接口库
-    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
     //各种广播监听哭
-    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.5'
     //基建库
-    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.5'
     //同上上报库
-    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
+    //权限库
+    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
+    //Lru磁盘缓存库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
+    //Lru磁盘缓存库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
+    //Lru内存缓存库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.3.5'
+    //fragment生命周期监听库
+    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.3.5'
+    //反射工具库
+    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:1.3.5'
+    //App启动优化库
+    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:1.3.5'
+    //内存工具类
+    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.3.5'
 
-
-    implementation project(path: ':AppProcessLib')
     //公共类
-    implementation project(path: ':BaseClassLib')
-    implementation project(path: ':ComponentLib')
-    implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':ActivityManager')
-    implementation project(path: ':AppBaseStore')
-    implementation project(path: ':AppLogLib')
-    implementation project(path: ':AppRestartLib')
-    implementation project(path: ':SafeIntentLib')
-    implementation project(path: ':AppCommonInter')
-    implementation project(path: ':AppStatusLib')
-    implementation project(path: ':ArchitectureLib')
-    implementation project(path: ':EventUploadLib')
-    implementation project(path: ':AppPermission')
-    implementation project(path: ':ToastUtils')
-    implementation project(path: ':FragmentManager')
+//    implementation project(path: ':BaseClassLib')
+//    implementation project(path: ':ComponentLib')
+//    implementation project(path: ':ToolUtilsLib')
+//    implementation project(path: ':ActivityManager')
+//    implementation project(path: ':AppBaseStore')
+//    implementation project(path: ':AppLogLib')
+//    implementation project(path: ':AppRestartLib')
+//    implementation project(path: ':SafeIntentLib')
+//    implementation project(path: ':AppCommonInter')
+//    implementation project(path: ':AppStatusLib')
+//    implementation project(path: ':ArchitectureLib')
+//    implementation project(path: ':EventUploadLib')
+//    implementation project(path: ':AppPermission')
+//    implementation project(path: ':ToastUtils')
+//    implementation project(path: ':FragmentManager')
 
     //其他
     implementation project(path: ':RoundCorners')
     implementation project(path: ':LibraryLayer')
     implementation project(path: ':ReflectionLib')
+    implementation project(path: ':AppProcessLib')
 }
