--- a/MonitorLib/MonitorCrashLib/build.gradle
+++ b/MonitorLib/MonitorCrashLib/build.gradle
@@ -39,12 +39,11 @@ dependencies {
     implementation(rootProject.ext.dependencies["swiperefreshlayout"])
     implementation(rootProject.ext.dependencies["coordinatorlayout"])
     //工具类utils：https://github.com/yangchong211/YCCommonLib
-//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.3'
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.3'
-    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.3'
-    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.3'
-    implementation project(path: ':ToolUtilsLib')
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     //implementation project(path: ':BaseClassLib')
     //implementation project(path: ':AppRestartLib')
     //implementation project(path: ':ActivityManager')
