--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -30,9 +30,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':AppPermission')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    //权限库
+    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
     implementation project(path: ':LocaleHelperLib')
-    implementation project(path: ':ToolMemoryLib')
-    implementation project(path: ':ToolMemoryLib')
+    //内存工具类
+    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.3.5'
 }
