--- a/MonitorLib/MonitorPingLib/build.gradle
+++ b/MonitorLib/MonitorPingLib/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
-    implementation project(path: ':ToolUtilsLib')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
 }
