--- a/MonitorLib/MonitorPrivacy/build.gradle
+++ b/MonitorLib/MonitorPrivacy/build.gradle
@@ -30,8 +30,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':AppCommonInter')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    //通用组件接口库
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
     //implementation 'de.robv.android.xposed:api:82'
     //https://github.com/tiann/epic
     //implementation 'com.github.tiann:epic:0.11.2'
