--- a/MonitorLib/MonitorTimeLib/build.gradle
+++ b/MonitorLib/MonitorTimeLib/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
-    implementation project(path: ':ToolUtilsLib')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
 }
