--- a/settings.gradle
+++ b/settings.gradle
@@ -40,7 +40,7 @@ project(':LibraryLayer').projectDir = new File('Business/LibraryLayer')
 
 /* +++++++++ 框架业务服务层 +++++++++ */
 include ':ImageServer', ':HttpServer', ':ShareServer', ':NfcServer',
-        ':ServerInterface', ':GsonServer', ':IpcServer', ':ObjectEqualLib',
+        ':GsonServer', ':IpcServer', ':ObjectEqualLib',
         ':EasyBleServer', ':LogUpload', ':OkHttpServer', ':PrivateServer',
         ':AppLogHelper', ':AppLogProcess', ':NetInterceptor', ':SignalHooker',
         ':GlideProgressLib', ':CompressServer', ':BellsVibrations'
@@ -51,7 +51,6 @@ project(':NfcServer').projectDir = new File('ServerLib/NfcServer')
 project(':GsonServer').projectDir = new File('ServerLib/GsonServer')
 project(':AppLogHelper').projectDir = new File('ServerLib/AppLogHelper')
 project(':AppLogProcess').projectDir = new File('ServerLib/AppLogProcess')
-project(':ServerInterface').projectDir = new File('ServerLib/ServerInterface')
 project(':IpcServer').projectDir = new File('ServerLib/IpcServer')
 project(':ObjectEqualLib').projectDir = new File('ServerLib/ObjectEqualLib')
 project(':EasyBleServer').projectDir = new File('ServerLib/EasyBleServer')
