--- a/WidgetLib/WebViewLib/build.gradle
+++ b/WidgetLib/WebViewLib/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["coordinatorlayout"])
     implementation(rootProject.ext.dependencies["okhttp"])
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ToolFileLib')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 
