--- a/CommonLib/AppBaseStore/build.gradle
+++ b/CommonLib/AppBaseStore/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation project(path: ':EventUploadLib')
     implementation project(path: ':AppLruDisk')
     implementation project(path: ':AppLruCache')
+    implementation project(path: ':ToolFileLib')
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
 }
