--- a/MonitorLib/MonitorFileLib/build.gradle
+++ b/MonitorLib/MonitorFileLib/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.github.yangchong211.YCThreadPool:ThreadPoolLib:1.3.7'
     //吐司工具库：https://github.com/yangchong211/YCDialog
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation project(path: ':AppCompress')
 }
