--- a/MonitorLib/MonitorFileLib/build.gradle
+++ b/MonitorLib/MonitorFileLib/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     implementation(rootProject.ext.dependencies["recyclerview"])
     implementation(rootProject.ext.dependencies["media"])
     //工具类utils：https://github.com/yangchong211/YCCommonLib
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
-    //implementation project(path: ':ToolUtilsLib')
+    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation project(path: ':ToolUtilsLib')
     //adapter:https://github.com/yangchong211/YCRefreshView
     implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
     //状态栏：https://github.com/yangchong211/YCStatusBar
