--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -87,13 +87,13 @@ dependencies {
 //    implementation project(path: ':AppPermission')
 //    implementation project(path: ':FragmentManager')
 //    implementation project(path: ':ReflectionLib')
+    implementation project(path: ':ToolFileLib')
+    implementation project(path: ':AppMediaStore')
 
     //其他
     implementation project(path: ':RoundCorners')
     implementation project(path: ':LibraryLayer')
     implementation project(path: ':AppProcessLib')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    implementation project(path: ':ToolFileLib')
-    implementation project(path: ':ToolFileLib')
     implementation project(path: ':MonitorFileLib')
 }
