--- a/CommonLib/AppMediaStore/build.gradle
+++ b/CommonLib/AppMediaStore/build.gradle
@@ -28,6 +28,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-    implementation project(path: ':AppMediaStore')
-
+    implementation project(path: ':ToolFileLib')
 }
