--- a/settings.gradle
+++ b/settings.gradle
@@ -74,7 +74,7 @@ include ':AppStatusLib',':ToolUtilsLib',':FragmentManager',':AppCompress',
         ':AppInitCompiler',':AppLogLib',':AppRestartLib', ':SafeIntentLib',
         ':ArchitectureLib',':ActivityManager', ':ToolFileLib',':EventUploadLib',
         ':AppCommonInter',':ToolMemoryLib',':AppPermission',':PhoneSensor',
-        ':AppLruDisk',':AppLruCache',':DownloadHelper',':AppEncryptLib'
+        ':AppLruDisk',':AppLruCache',':DownloadHelper',':AppEncryptLib',':AppMediaStore'
 project(':AppStatusLib').projectDir = new File('CommonLib/AppStatusLib')
 project(':ToolUtilsLib').projectDir = new File('CommonLib/ToolUtilsLib')
 project(':ComponentLib').projectDir = new File('CommonLib/ComponentLib')
@@ -103,7 +103,7 @@ project(':AppLruDisk').projectDir = new File('CommonLib/AppLruDisk')
 project(':AppLruCache').projectDir = new File('CommonLib/AppLruCache')
 project(':DownloadHelper').projectDir = new File('CommonLib/DownloadHelper')
 project(':AppEncryptLib').projectDir = new File('CommonLib/AppEncryptLib')
-
+project(':AppMediaStore').projectDir = new File('CommonLib/AppMediaStore')
 
 
 
@@ -252,8 +252,6 @@ project(':VideoKernel').projectDir = new File('PlayerLib/VideoKernel')
 project(':VideoPlayer').projectDir = new File('PlayerLib/VideoPlayer')
 project(':VideoM3u8').projectDir = new File('PlayerLib/VideoM3u8')
 project(':VideoView').projectDir = new File('PlayerLib/VideoView')
-
-
 
 
 
