--- a/MonitorLib/MonitorCrashLib/build.gradle
+++ b/MonitorLib/MonitorCrashLib/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     //implementation project(path: ':AppRestartLib')
     //implementation project(path: ':ActivityManager')
     //implementation project(path: ':EventUploadLib')
-    //implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
-    implementation project(path: ':EastAdapterLib')
+    implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
+    //implementation project(path: ':EastAdapterLib')
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     //吐司工具库：https://github.com/yangchong211/YCDialog
