--- a/PlayerLIb/VideoSqlLite/build.gradle
+++ b/PlayerLIb/VideoSqlLite/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':VideoTool')
+    implementation project(path: ':AppLruCache')
+    implementation project(path: ':AppLruDisk')
 }
 
 
