--- a/AppPlayer/build.gradle
+++ b/AppPlayer/build.gradle
@@ -97,5 +97,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     implementation 'com.github.yangchong211:YCScrollPager:1.0.5'
     implementation 'com.github.yangchong211:YCStateLayout:1.2.5'
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
 
 }
