--- a/PlayerLIb/AudioPlayer/build.gradle
+++ b/PlayerLIb/AudioPlayer/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["media"])
+    //通用组件接口库
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
     implementation("com.google.android.exoplayer:exoplayer:2.11.3")
     implementation project(':VideoTool')
 }
