--- a/AppPlayer/build.gradle
+++ b/AppPlayer/build.gradle
@@ -99,5 +99,6 @@ dependencies {
     implementation 'com.github.yangchong211:YCStateLayout:1.2.5'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
 
 }
