--- a/PlayerLIb/MusicPlayer/build.gradle
+++ b/PlayerLIb/MusicPlayer/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["media"])
     implementation 'com.github.yangchong211.YCNotification:NotificationLib:1.0.4'
-    implementation project(path: ':VideoTool')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
 }
 
 
