--- a/PlayerLIb/VideoKernel/build.gradle
+++ b/PlayerLIb/VideoKernel/build.gradle
@@ -51,9 +51,7 @@ dependencies {
     //compileOnly("com.google.android.exoplayer:exoplayer-transformer:2.11.3")
     //rtmp
     compileOnly("com.google.android.exoplayer:extension-rtmp:2.11.3")
-
-    implementation project(':VideoTool')
-
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
 
