--- a/PlayerLIb/VideoPlayer/build.gradle
+++ b/PlayerLIb/VideoPlayer/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["cardview"])
     implementation project(':VideoKernel')
-    implementation project(path: ':VideoTool')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     /*//这两个是必须要加的，其它的可供选择
     //ijk播放器
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
