--- a/PlayerLIb/VideoSqlLite/build.gradle
+++ b/PlayerLIb/VideoSqlLite/build.gradle
@@ -28,9 +28,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':VideoTool')
     implementation project(path: ':AppLruCache')
     implementation project(path: ':AppLruDisk')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
 }
 
 
